--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">FizzBuzz</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="textview1">TextView_Main</string>
+    <string name="btn1">Go!</string>
 
 </resources>
