--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="textview1">TextView_Main</string>
+    <string name="editText1"># of loops</string>
     <string name="btn1">Go!</string>
 
 </resources>
