--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="splash">FizzBuzz Splash!</string>
     <string name="app_name">FizzBuzz</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Settings (there are none)</string>
     <string name="hello_world">Hello world!</string>
     <string name="textview1">TextView_Main</string>
-    <string name="editText1"># of loops</string>
+    <string name="editText1">Enter a #!</string>
     <string name="btn1">Go!</string>
 
 </resources>
